Update mago3d-admin